tests/NormalTests/paczka1/fuzzy1/47960972.err
Error in line 6: S9 A4 88,9
Error in line 8: S9 A4 336,0
Error in line 10: dd29UB A4 41,3
Error in line 11: dd29UB A185 54,1
Error in line 4: 7C56cRWb A581 4,9
Error in line 20: 7C56cRWb A4 10,9
Error in line 25: S9 A4 0,2
Error in line 24: SCRXzMcru2 A185 95,7
Error in line 30: S9 A4 0,2
Error in line 27: SCRXzMcru2 A4 51,6
Error in line 32: SCRXzMcru2 S9 99,1
